--- a/vote/Dockerfile
+++ b/vote/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /app
 
 # Install our requirements.txt
 COPY requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --trusted-host pypi.python.org --upgrade pip
 
 # Copy our code from the current folder to /app inside the container
 COPY . .
